# Extreme_Stock_Event_Prediction

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: AAPL_2015-01-01_2024-01-01.csv  best_tcnn.pth  random_forest_stock_1_best_model.pkl  random_forest_stock_1_scaler.pkl  rf_config.yaml  tcn_config.yaml  tcn_scaler.pkl
src/: __init__.py  data_processing.py  improvements.py  model_evaluation.py  random_forest.py  temporal_cnn.py
