[project]
name = "stock-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Asterios Mantzanis",email = "asteriosmantzanis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "mlflow (>=2.21.0,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
